--- a/src/Components/Github/Github.css
+++ b/src/Components/Github/Github.css
@@ -4,7 +4,7 @@
   flex-flow: row-reverse;
   background-color: #2e2e2e;
   /* margin-right: 13%; */
-  padding-right: 14.5vw;
+  padding-right: 18.5rem;
 }
 .Card {
   display: flex;
