--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,4 +1,42 @@
 .projectsBody{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
     background-color: #2E2E2E;
-    padding-top:5%;
+    
+
+}
+.prjctImg{
+    border-radius: 1.5rem;
+    width: 19.5rem;
+    height: 18.5rem;
+    margin-right: 0.5rem;
+}
+
+
+.wellDone{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    padding: 3%;
+}
+.wdInfo{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+}
+.wdBio {
+    background-color: #f0f0f0;
+    height: 23.5rem;
+    width: 70rem;
+    border-radius: 1.5rem;
+    margin-left: 1%;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: baseline;
 }
